# deepl-ai-tutor

./: .env  .env.copy  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  SPEC.md  app.py  debug_pipeline.py  gui_spec.md  llm-eval-plan.md  llm-eval-spec.md  llmgraph_spec.md  plan.md  pyproject.toml  references.md  run.py  sequence_diagram.md
.claude/: settings.json
.streamlit/: config.toml
ai_tutor_tejaswi/: .env  .env.example  CLAUDE.md  app.py  pyproject.toml
ai_tutor_tejaswi/analytics/: db.py  models.py  persistence.py  stats.py
ai_tutor_tejaswi/content/: _utils.py  content_enricher.py  diagram_generator.py  inline_question_gen.py  llm_client.py  models.py  topic_decomposer.py
ai_tutor_tejaswi/data/: ai_tutor.db
ai_tutor_tejaswi/frontend/: module_viewer.py  quiz_page.py  results_page.py  upload_page.py
ai_tutor_tejaswi/ingestion/: docx_parser.py  image_extractor.py  models.py  pdf_parser.py  pptx_parser.py
ai_tutor_tejaswi/quiz/: assembler.py  difficulty.py  evaluator.py  models.py  question_bank.py
ai_tutor_tejaswi/tests/: conftest.py
ai_tutor_tejaswi/tests/fixtures/: README.md
ai_tutor_tejaswi/tests/test_analytics/: test_db.py  test_stats.py
ai_tutor_tejaswi/tests/test_content/: test_llm_client.py
ai_tutor_tejaswi/tests/test_ingestion/: test_models.py
ai_tutor_tejaswi/tests/test_quiz/: test_assembler.py  test_evaluator.py
analytics/: __init__.py  db.py  models.py  persistence.py  stats.py
backend/analytics/: __init__.py  auth.py  db.py  models.py  persistence.py  stats.py
backend/chatbot/: engine.py
backend/content/: __init__.py  audio_generator.py  content_enricher.py  diagram_generator.py  inline_question_gen.py  llm_client.py  models.py  pipeline.py  sliding_pipeline.py  topic_decomposer.py
backend/content_factory/: __init__.py  agents.py  crew.py  tasks.py
backend/core/: mcp_client.py
backend/ingestion/: __init__.py  docx_parser.py  image_extractor.py  models.py  pdf_parser.py  pptx_parser.py  vtt_parser.py
backend/interactive_tutor/: __init__.py  checkpointer.py  graph.py
backend/observability/: __init__.py  eval_runner.py  (+1 more)
content/: __init__.py  content_enricher.py  diagram_generator.py  inline_question_gen.py  llm_client.py  models.py  pipeline.py  topic_decomposer.py
frontend/: admin_upload_page.py  audio_autostop.py  chatbot_page.py  demo_mode.py  login_page.py  mastery_report_page.py  mermaid_render.py  module_library_page.py  module_viewer.py  nav.py  observability_page.py  quiz_page.py  results_page.py  sidebar_toggle.py  styles.py  system_check_page.py  tutor_room.py  upload_page.py
ingestion/: __init__.py  image_extractor.py  models.py  pdf_parser.py
quiz/: __init__.py  assembler.py  evaluator.py  models.py  question_bank.py
report/: report.bib  report.tex
(+64 files in other folders)
