[project]
name = "course-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "chromadb>=1.5.9",
    "mcp[cli]>=1.27.2",
    "openai>=2.41.1",
    "portkey-ai>=2.3.1",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "streamlit-mermaid>=0.3.0",
]
