[project]
name = "course-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "arize-phoenix>=8.0.0",
    "chromadb>=1.5.9",
    "deepeval>=2.0.0",
    "edge-tts>=7.2.8",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "mcp[cli]>=1.27.2",
    "openai>=2.41.1",
    "openinference-instrumentation-anthropic>=0.1.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "portkey-ai>=2.3.1",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "streamlit-mermaid>=0.3.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
