[project]
name = "ai-tutor"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.35.0",
    "pymupdf>=1.24.0",
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-generativeai>=0.7.0",
    "matplotlib>=3.9.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
